--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,10 +1,40 @@
 en:
+  activerecord:
+    models:
+      product: Product
+    attributes:
+      product:
+        title: 'Title'
+        description: 'Description'
+        price: 'Price'
+        photo: 'Photo'
+    errors:
+      models:
+        product:
+          attributes:
+            title:
+              blank: 'Title cant be blank'
+            description:
+              blank: 'Description cant be blank'
+            price:
+              blank: 'Price cant be blank'
+  common:
+    confirm: 'Are you sure?'
   products:
     edit:
       title: 'Edit product'
 
     new:
       title: 'New product'
+    index:
+      title: 'Products'
+    created:
+        notice: 'Product successfully created'
+    updated:
+        notice: 'Product successfully updated'
+    destroy:
+        destroyed: 'Product successfully deleted'
+
 
 
 
