--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -23,6 +23,7 @@ es:
   common:
     confirm: '¿Estás seguro?'
     back: 'Regresar'
+    not_logged_in: 'No has iniciado sesión'
   shared:
     header:
       add: 'Añadir producto'
